@@ -26,6 +26,7 @@ def base64_to_blob(data):
 class ImportError(ValueError):
     pass
 
+
 class Importer(object):
 
     def __init__(self, cms, data):
@@ -68,6 +69,7 @@ class Importer(object):
                 edition.modified = extract_date(edition_node.get('modified'))
                 edition.created = extract_date(edition_node.get('created'))
                 zope.event.notify(grok.ObjectModifiedEvent(edition))
+        zope.event.notify(ContentImported(self.cms, errors))
         return errors
 
     def import_htmlpage(self, edition, node):
@@ -96,6 +98,15 @@ class Importer(object):
                     del page[edition.__name__]
             current = current.get(name)
         return current
+
+
+class ContentImported(object):
+
+    zope.interface.implements(asm.cms.interfaces.IContentImported)
+
+    def __init__(self, site, errors):
+        self.site = site
+        self.errors = errors
 
 
 def extract_date(str):
